src/public/css/styles.css
* {
    background: lightblue;
}

/* Input forms */
#data-form{
    display: block;
    border: 6px solid lightcyan;
    box-shadow: 2px 2px 5px grey;
    background:lightcyan;
    width: 20%;
    min-width: 400px;
    margin-left: auto;
    margin-right: auto;
}
#data-form form, label, select, option, span{
    background: lightcyan;
}
#data-form h3{
    margin-left: auto;
    margin-right: auto;
    background: lightcyan;
}
#data-form p, a{
    background: lightcyan;
    text-align: center;
}
.data-fields {
    position: relative;
}
.data-input-style{
    background: lightcyan;
    border-top-style: hidden;
    border-right-style: hidden;
    border-left-style: hidden;
    border-bottom: 1px solid black;
    width: 100%;
}
.data-button-style{
    position: relative;
    margin: auto;
    border-top-style: hidden;
    border-right-style: hidden;
    border-left-style: hidden;
    border-bottom-style: hidden;
    background:#c9e5e5;
    width:50%;
    height:25px;
    left: 25%;
}
.data-button-style:hover{
    background:#abc2c2;
}

